@@ -2,7 +2,8 @@
  *  job_scheduler.h - data structures and function definitions for scheduling
  *	of pending jobs in priority order
  *****************************************************************************
- *  Copyright (C) 2002-2006 The Regents of the University of California.
+ *  Copyright (C) 2002-2007 The Regents of the University of California.
+ *  Copyright (C) 2008 Lawrence Livermore National Security.
  *  Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
  *  Written by Morris Jette <jette@llnl.gov>, et. al.
  *  Derived from dsh written by Jim Garlick <garlick1@llnl.gov>
@@ -47,6 +48,14 @@ struct job_queue {
 	uint32_t job_priority;
 	uint16_t part_priority;
 };
+
+/*
+ * build_feature_list - Translate a job's feature string into a feature_list
+ * IN  details->features
+ * OUT details->feature_list
+ * RET error code
+ */
+extern int build_feature_list(struct job_record *job_ptr);
 
 /* 
  * build_job_queue - build (non-priority ordered) list of pending jobs
